--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,17 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">18,473</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">7</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">113,300</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.magento.testcases.SalePageTest</td><td><a href="#m0">verifyTees</a></td><td rowspan="1">1692161747315</td><td rowspan="1">375</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.magento.testcases.HomePageTest</td><td><a href="#m0">navigateToRegistrationPage</a></td><td rowspan="1">1693776141904</td><td rowspan="1">2270</td></tr><tr class="passedeven"><td><a href="#m1">validateTitle</a></td><td rowspan="1">1693776105257</td><td rowspan="1">201</td></tr><tr class="passedodd"><td rowspan="2">com.magento.testcases.MyAccountPageTest</td><td><a href="#m2">validateContactInfo</a></td><td rowspan="1">1693776153414</td><td rowspan="1">2779</td></tr><tr class="passedodd"><td><a href="#m3">validateNavUserName</a></td><td rowspan="1">1693776123456</td><td rowspan="1">2215</td></tr><tr class="passedeven"><td rowspan="1">com.magento.testcases.RegistrationPageTest</td><td><a href="#m4">registration</a></td><td rowspan="1">1693776110969</td><td rowspan="1">4479</td></tr><tr class="passedodd"><td rowspan="1">com.magento.testcases.SalePageTest</td><td><a href="#m5">verifyTees</a></td><td rowspan="1">1693776166561</td><td rowspan="1">355</td></tr><tr class="passedeven"><td rowspan="1">com.magento.testcases.SignInPageTest</td><td><a href="#m6">validateUserName</a></td><td rowspan="1">1693776132149</td><td rowspan="1">5096</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.magento.testcases.SalePageTest#verifyTees</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.magento.testcases.HomePageTest#navigateToRegistrationPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.magento.testcases.HomePageTest#validateTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.magento.testcases.MyAccountPageTest#validateContactInfo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.magento.testcases.MyAccountPageTest#validateNavUserName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.magento.testcases.RegistrationPageTest#registration</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.magento.testcases.SalePageTest#verifyTees</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">com.magento.testcases.SignInPageTest#validateUserName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
